tests/fixtures/errors/release_not_variable.z
# E0200: .release can only be applied to a variable name.
thing: class { v: String }
box: class { t: thing }
f: function {b: box} is {
    b.t.release
}
main: function is {
    th: thing v: "x".string
    bx: box t: th
    f b: bx
}
